target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2022-05-02 - 19:13:22 +0000
  labels:
    app.kubernetes.io/name: quarkus-secret-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-secret-example
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-secret-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2022-05-02 - 19:13:22 +0000
  labels:
    app.kubernetes.io/name: quarkus-secret-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-secret-example
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: quarkus-secret-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/build-timestamp: 2022-05-02 - 19:13:22 +0000
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: quarkus-secret-example
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: danieloh/quarkus-secret-example:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: quarkus-secret-example
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      serviceAccountName: quarkus-secret-example
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - quarkus-secret-example
        from:
          kind: ImageStreamTag
          name: quarkus-secret-example:1.0.0-SNAPSHOT
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2022-05-02 - 19:13:22 +0000
  labels:
    app.kubernetes.io/name: quarkus-secret-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-secret-example
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-secret-example
